# rust-http-server-from-scratch

./: BENCHMARK.md  Cargo.toml  README.md  benchmark.yml
src/: http_request.rs  http_response.rs  lib.rs  macros.rs  main.rs  router.rs  tokens.rs  websocket.rs
src/websocket/: frame.rs  mask.rs  middleware.rs  mod.rs
