[package]
edition = "2018"
name = "webserver-from-scratch"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
async-trait = "0.1.51"
bytes = "1"
httpstatus = "0.1"
socket2 = "0.4"
tokio = {version = "1.12.0", features = ["rt-multi-thread", "net"]}

[[bin]]
name = "client"
path = "src/bin/client.rs"

[[bin]]
name = "server"
path = "src/bin/server.rs"
