[package]
edition = "2021"
name = "webserver-from-scratch"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
async-trait = "0.1"
base64 = "0.13"
bytes = "1"
futures = "0.3"
httpstatus = "0.1"
parking_lot = {version = "0.11", features = ["send_guard"]}
sha-1 = "0.9"
socket2 = "0.4"
thiserror = "1.0"
tokio = {version = "1.12", features = ["rt-multi-thread", "net", "io-util", "sync"]}

[[bin]]
name = "client"
path = "src/bin/client.rs"

[[bin]]
name = "server"
path = "src/bin/server.rs"
